Fix landing jump on load, show footer when no landing, jump to hash pos on resize

--- a/src/styles/header.styl
+++ b/src/styles/header.styl
@@ -1,5 +1,5 @@
 .landing
-    height 92vh
+    height 100vh
     background-color rgba(0, 0, 0, 0.7)
     outline none
 
